--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <p>hello world</p>
             <p>hello world</p>
         </div>
+        <nav>lateral</nav>
     </main>
 </body>
 </html>
